--- a/talent-connect-swap-main/backend/.env
+++ b/talent-connect-swap-main/backend/.env
@@ -1,41 +1,35 @@
-# Server Configuration
+# ───────────── Server Configuration ─────────────
 PORT=5000
 NODE_ENV=development
 
-# MongoDB Configuration
-# For local development (default)
+# ───────────── MongoDB Configuration ─────────────
+# Local MongoDB (default)
 MONGODB_URI=mongodb://localhost:27017/skillswap
 
-# For MongoDB Atlas (uncomment and replace with your connection string)
-#MONGODB_URI=mongodb+srv://skillswap:<HiHP6iYMRM1QhTUE>@cluster0.afipyrt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MongoDB Atlas (replace with your real credentials)
+# MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/skillswap?retryWrites=true&w=majority
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# ───────────── JWT Configuration ─────────────
+JWT_SECRET=your-super-secret-jwt-key-change-this
 JWT_EXPIRES_IN=7d
 
-# Cloudinary Configuration (for image uploads)
+# ───────────── Cloudinary Configuration ─────────────
 CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 
-# Email Configuration (for notifications)
+# ───────────── Email Configuration ─────────────
+EMAIL_SERVICE=gmail
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
+EMAIL_FROM=Skill Swap <your-email@gmail.com>
+FRONTEND_URL=http://localhost:5173
 
-
-#nodemailer
-EMAIL_SERVICE=gmail
-EMAIL_USER=abc240031@gmail.com
-EMAIL_PASS=oyls eiua ifmx bvyp
-EMAIL_FROM=Skill Swap <abc240031@gmail.com>
-FRONTEND_URL=http://localhost:8080
-
-
-# Rate Limiting
+# ───────────── Rate Limiting ─────────────
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# WebSocket Configuration
-WS_CORS_ORIGIN=http://localhost:8080 
+# ───────────── WebSocket Configuration ─────────────
+WS_CORS_ORIGIN=http://localhost:5173
